feat(compiler): implement AOTCompiler for programmatic compilation, jpackage, and GraalVM Native Image packaging